# cert_human

./: .gitignore  HISTORY.md  Makefile  README.md  cert_human_cli.py  pyproject.toml  requirements.txt
.github/workflows/: black-format.yml  pylama-lint.yml  pytest.yml
cert_human/: __init__.py
cert_human_py3/: __init__.py
tests/: test_cert_human.py
