[tool.poetry]
name = "cert_human"
version = "0.1.0"
description = ""
authors = ["dev <dev@qiyutech.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

requests = ">=2,<3"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
